fix: Swagger Generation
